subdir('bm29')
subdir('id02')
subdir('id31')
py.install_sources(
   [
    'example.py',
    'focus.py',
    'id15.py',
    'id15v2.py',
    'id27.py',
    'pyfai.py'
    ],
  pure: false,    # Will be installed next to binaries
  subdir: 'dahu/plugins'  # Folder relative to site-packages to install to
)