py.install_sources( [
   'common.py',  
   'hplc.py',  
   '__init__.py',  
   'integrate.py',  
   'ispyb.py',  
   'nexus.py',  
   'subtracte.py',
   'memcached.py',
   'icat.py',
   'mesh.py'
    ],
  pure: false,    # Will be installed next to binaries
  subdir: 'dahu/plugins/bm29'  # Folder relative to site-packages to install to
)